2008-02-11  Sebastian Dröge  <slomo@circular-chaos.org>

	* sys/fbdev/gstfbdevsink.c: (gst_fbdevsink_class_init),
	(gst_fbdevsink_finalize):
	Free the device string in finalize. Fixes bug #515722.

2008-02-11  Sebastian Dröge  <slomo@circular-chaos.org>

	* ext/xvid/gstxvidenc.c: (gst_xvidenc_init):
	Unset GValues after using them. Fixes bug #515720.

2008-02-11  Sebastian Dröge  <slomo@circular-chaos.org>

	* tests/check/Makefile.am:
	Disable the dvb plugin for the states test. Fixes bug #515567.

2008-02-10  Edgard Lima,,,,  <edgard.lima@indt.org.br>

	* ext/metadata/TODO:
	* ext/metadata/metadata_mapping.htm:
	* ext/metadata/metadataexif.c:
	* ext/metadata/metadatatags.c:
	* ext/metadata/metadatatags.h:
	* tests/icles/metadata_editor.c:
	  Revert changes to 2008-02-09 due to frozen.

2008-02-10  Jan Schmidt  <jan.schmidt@sun.com>

	* ext/ivorbis/vorbisfile.c:
	Trivial fix for build warning.
	Patch by: Josep Torra Valles <josep@fluendo.com>
	Fixes: #515588

2008-02-10  Edgard Lima  <edgard.lima@indt.org.br>

	* ext/metadata/TODO:
	* ext/metadata/metadataexif.c:
	  Convert from EXIF to XMP DataTime as local time.

2008-02-10  Edgard Lima  <edgard.lima@indt.org.br>

	* ext/metadata/TODO:
	* ext/metadata/metadata_mapping.htm:
	* ext/metadata/metadataexif.c:
	* ext/metadata/metadatatags.c:
	* ext/metadata/metadatatags.h:
	* tests/icles/metadata_editor.c:
	  Map Date-Time and GPS tags.
	  

2008-02-09  Jan Schmidt  <jan.schmidt@sun.com>

	* gst/selector/Makefile.am:

	Listing the marshal.h in the nodist_HEADERS breaks distcheck, so
	let's not do that

	* tests/check/Makefile.am:
	Disable the crashing cdaudio plugin from the states test so I can make
	pre-releases.

2008-02-09  Jan Schmidt  <jan.schmidt@sun.com>

	* win32/vs6/libgstdshowdecwrapper.dsp:
	* win32/vs6/libgstflv.dsp:
	Convert to DOS line endings, and set -kb

2008-02-08  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* sys/dvb/Makefile.am:
	* sys/dvb/dvbbasebin.c:
	Add URI Handler for dvb.